--- a/style.css
+++ b/style.css
@@ -12,10 +12,10 @@ body {
     justify-items: center;
 }
 
-table {
-    width: 90vw;
-    height: 100vh;
-}
+/* table { */
+    /* width: 90vw;
+    height: 100vh; */
+/* }
 
 input {
     width: 80vw;
@@ -24,5 +24,5 @@ input {
 button {
     width: 10vw;
     border-radius: 4px;
-}
+} */
 
